src/test/ui/borrowck/borrowck-loan-in-overloaded-op.nll.stderr
error[E0382]: borrow of moved value: `x`
  --> $DIR/borrowck-loan-in-overloaded-op.rs:31:20
   |
LL |     let _y = {x} + x.clone(); // the `{x}` forces a move to occur
   |               -    ^ value borrowed here after move
   |               |
   |               value moved here
   |
   = note: move occurs because `x` has type `foo`, which does not implement the `Copy` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
